fix:  some emojis were too big

--- a/src/components/Chat/Markup/Emoji.css
+++ b/src/components/Chat/Markup/Emoji.css
@@ -9,6 +9,6 @@
 
 .Emoji-img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: 10em;
   vertical-align: middle;
 }
